--- a/.github/workflows/release-python-gpu.yml
+++ b/.github/workflows/release-python-gpu.yml
@@ -22,7 +22,7 @@ jobs:
           # - { os: ubuntu-20.04, arch: i686,       build: 'cp*-musllinux*' }
           # - { os: ubuntu-20.04, arch: i686,       build: 'pp*'            }
           # - { os: windows-2019, arch: x86,        build: 'cp*'            }
-          - { os: windows-2019, arch: AMD64,      build: 'cp38'            }
+          - { os: windows-2019, arch: AMD64,      build: 'cp*'            }
           # - { os: windows-2019, arch: AMD64,      build: 'pp*'            }
           # - { os: windows-2019, arch: ARM64,      build: 'cp*'            }
           # - { os: macos-latest, arch: x86_64,     build: 'cp38'            }
@@ -129,7 +129,7 @@ jobs:
 
       - name: Build wheels
         if: matrix.os == 'windows-2019'
-        uses: pypa/cibuildwheel@v2.13.0
+        uses: pypa/cibuildwheel@v2.14.0
         env:
           CIBW_ARCHS_MACOS: ${{ matrix.arch }}
           CIBW_ARCHS_LINUX: ${{ matrix.arch }}
