--- a/.github/workflows/release-python-gpu.yml
+++ b/.github/workflows/release-python-gpu.yml
@@ -145,8 +145,9 @@ jobs:
           package-dir: ncnn-python-gpu
           output-dir: wheelhouse
 
-      - name: Build wheels for windows x86
-        if: matrix.os == 'windows-2019' && matrix.arch == 'x86'
+      - name: Build wheels for windows x86 and windows ARM64
+        if: (matrix.os == 'windows-2019' && matrix.arch == 'x86') || 
+            (matrix.os == 'windows-2019' && matrix.arch == 'ARM64')
         uses: pypa/cibuildwheel@v2.15.0
         env:
           CIBW_ARCHS_MACOS: ${{ matrix.arch }}
@@ -161,6 +162,8 @@ jobs:
                            cd Vulkan-Loader && mkdir build && cd build &&
                            cmake -DUPDATE_DEPS=On -DCMAKE_BUILD_TYPE=Release -DVULKAN_HEADERS_INSTALL_DIR=$(PWD)/Vulkan-Headers/build/install .. &&
                            cmake --build .
+                           cd Vulkan-Headers &&
+                           ln -s ../loader lib 
           CIBW_BEFORE_BUILD: pip install delvewheel
           CIBW_REPAIR_WHEEL_COMMAND: delvewheel repair -w {dest_dir} {wheel}
         with:
@@ -226,9 +229,7 @@ jobs:
           output-dir: wheelhouse
 
       - name: Build wheels for cpu only now
-        if: (matrix.os == 'windows-2019' && matrix.arch == 'x86') || 
-            (matrix.os == 'windows-2019' && matrix.arch == 'ARM64') ||
-            (matrix.os == 'macos-latest' && matrix.arch == 'arm64') || 
+        if: (matrix.os == 'macos-latest' && matrix.arch == 'arm64') || 
             (matrix.os == 'macos-latest' && matrix.arch == 'universal2')
         uses: pypa/cibuildwheel@v2.15.0
         env:
