--- a/.github/workflows/release-python-gpu.yml
+++ b/.github/workflows/release-python-gpu.yml
@@ -160,8 +160,8 @@ jobs:
                             LD_LIBRARY_PATH=D:/a/ncnn-gpu-pre-verification/ncnn-gpu-pre-verification/Vulkan-Loader/build/loader
           CIBW_BEFORE_ALL: git clone https://github.com/KhronosGroup/Vulkan-Loader.git &&
                            cd Vulkan-Loader && mkdir build && cd build &&
-                           python3 ..\scripts\update_deps.py --dir ./ --arch x86 --config debug &&
-                           cmake -C ..\external\helper.cmake -DCMAKE_BUILD_TYPE=Debug .. &&
+                           python3 ../scripts/update_deps.py --dir ./ --arch x86 --config debug &&
+                           cmake -C ./helper.cmake -DCMAKE_BUILD_TYPE=Debug .. &&
                            cmake --build . &&
                            xcopy "D:/a/ncnn-gpu-pre-verification/ncnn-gpu-pre-verification/Vulkan-Loader/build/loader/*"
                            "D:/a/ncnn-gpu-pre-verification/ncnn-gpu-pre-verification/Vulkan-Loader/build/Vulkan-Headers/lib" /s /e /h
